--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -34,7 +34,7 @@ What name do you prefer to be called by your classmates and instructor, if your 
 
 ### my answer     
   
-   
+   I would like to be called Janette by everyone.My nickname would be JJ if people prefer to call me that its fine.
  
 
 
