put my goals in answer.

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -45,7 +45,7 @@ What do you want to achieve in life?  What college subject do you think would be
 
 ### my answer     
   
-   
+   My goal in life is to become successful in my business, which is distributing and installing wholesale chiles throughout California.I am trying to achieve a Business Administration degree.  I am also learning sign language.
  
 
 
