i wrote what countries i have visited

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -57,7 +57,7 @@ Have you ever gone to foreign countries, if so which ones, if not Where might yo
 ### my answer     
   
    
-  
+  Yes I have gone to another country.I went to Mexico but I want to explore more and go to others like England and Canada.I have not been in the military but if I ever did I would love to join the Marines.
 
 
 
