answered the last question

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -70,7 +70,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
 ### my answer     
   
    
- 
+ I am taking Math 115 right now.I did not know i would have to take math 116 to transfer.I believe the councelors should give the students a notice.The grade i need to attain is no lower then a B but im aiming for an A.
 
 
 
